# permutt

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  converter.rs  main.rs  output_picker.rs  style.rs
