[package]
name = "permutt"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
glib = "0.20"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
anyhow = "1"
rayon = "1"
async-channel = "2"
libheif-rs = "1"
